Fixes em transaction
